--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         </button>
       </div>
     </header>
-    
     <main>
       <section class="hero">
         <h1 class="hero__header">
@@ -54,53 +53,67 @@
           </div>
         </div>
       </section>
-      <section class="secondary">
-        <div class="secondary__text">
-          <div class="secondary__text__completed_projects">
-            <h2 class="completed_projects__main_header">
+      <section class="completed_projects">
+        <div class="completed_projects__description">
+          <div class="completed_projects__description__main_block">
+            <h2 class="main_block__header">
               COMPLETED PROJECTS
             </h2>
-            <p class="completed_projects__description">
+            <p class="main_block__description">
               Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction 
               market we have made happy more than 1000 families
             </p>
           </div>
-          <div class="completed_projects__addition">
-            <h3 class="completed_projects__secondary_header">
+          <div class="completed_projects__secondary_block">
+            <h3 class="secondary_block__header">
               CITY
             </h3>
-            <p class="completed_projects__description">
+            <p class="secondary_block__description">
               Rostov-on-Don<br>
               LCD admiral
             </p>
           </div>
-          <div class="completed_projects__addition">
-            <h3 class="completed_projects__secondary_header">
+          <div class="completed_projects__secondary_block">
+            <h3 class="secondary_block__header">
               APARTMENT AREA
             </h3>
-            <p class="completed_projects__description">
+            <p class="secondary_block__description">
               81 m2
             </p>
           </div>
-          <div class="completed_projects__addition">
-            <h3 class="completed_projects__secondary_header">
+          <div class="completed_projects__secondary_block">
+            <h3 class="secondary_block__header">
               REPAIR TIME
             </h3>
-            <p class="completed_projects__description">
+            <p class="secondary_block__description">
               3.5 months
             </p>
           </div>
-          <div class="completed_projects__addition">
-            <h3 class="completed_projects__secondary_header">
+          <div class="completed_projects__secondary_block">
+            <h3 class="secondary_block__header">
               REPAIR COST
             </h3>
-            <p class="completed_projects__description">
+            <p class="secondary_block__description">
               UPON REQUEST
             </p>
           </div>
           <div class="completed_projects__slider">
-            <img src="images/left_arrow.svg" alt="left_arrow">
+            <img src="images/slider_arrows.svg" alt="slider_arrows">
           </div>
+        </div>
+        <div class="completed_projects__nav">
+          <ul class="completed_projects__nav__list">
+            <li class="completed_projects__nav__item">
+              <a class="completed_projects__link" href="#">ROSTOV-ON-DON ADMIRAL</a>
+            <li class="completed_projects__item">
+              <a class="completed_projects__link" href="#">SOCHI THIEVES</a>
+            <li class="completed_projects__item">
+              <a class="completed_projects__link" href="#">ROSTOV-ON-DON PATRIOT</a>
+            </li>
+          </ul>
+        </div>
+        <div class="completed_projects__image_block">
+          <img src="images/interior.svg" alt="interior">
         </div>
       </section>
     </main>
