--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
           ONLINE CONTROL
         </h2>
         <div class="online_control__camera_logo">
-          <img src="images/camera_line.svg" alt="camera_line">
+          <img src="images/line.svg" alt="line">
           <img src="images/camera.svg" alt="camera">
-          <img src="images/camera_line.svg" alt="camera_line">
+          <img src="images/line.svg" alt="line">
         </div>
         <div class="online_control__video">
           <div class="online_control__video_wrapper">
@@ -166,6 +166,143 @@
             <label>
               I agree to the processing of personal data
             </label>
+          </div>
+        </div>
+      </section>
+      <section class="types_of_repair__section">
+        <h2 class="types_of_repair__header">
+         TYPES OF REPAIR
+        </h2>
+        <div class="types_of_repair__logo">
+          <img src="images/line.svg" alt="line">
+          <img src="images/repair.svg" alt="repair">
+          <img src="images/line.svg" alt="line">
+        </div>
+        <div class="types_of_repair__card_block">
+          <div class="types_of_repair__card">
+            <div class="types_of_repair__card__description">
+              <img src="images/types_of_repair_left_img.svg" alt="types_of_repair_left_img">
+              <div class="types_of_repair__card__description__text">
+                <h3 class="types_of_repair__card__header">
+                  Redecorating
+                </h3>
+                <ul class="types_of_repair__list">
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Dismantling of old coatings</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Wallpapering</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Painting walls and ceilings</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Laying flooring</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Replacing plumbing</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Replacing sockets and switches</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Replacing doors</a>
+                  </li>
+                </ul>
+                <button class="types_of_repair__price_btn">
+                  FROM 900 RUB/M2
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="types_of_repair__card">
+            <div class="types_of_repair__card__description">
+              <img src="images/types_of_repair_middle_img.svg" alt="types_of_repair_middlw_img">
+              <div class="types_of_repair__card__description__text">
+                <h3 class="types_of_repair__card__header">
+                  Overhaul
+                </h3>
+                <ul class="types_of_repair__list">
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Dismantling of old coatings</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Wallpapering</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Painting walls and ceilings</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Laying flooring</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Replacing plumbing</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Replacing sockets and switches</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Replacing doors</a>
+                  </li>
+                </ul>
+                <button class="types_of_repair__price_btn">
+                  FROM 1800 RUB/M2
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="types_of_repair__card">
+            <div class="types_of_repair__card__description">
+              <img src="images/types_of_repair_middle_img.svg" alt="types_of_repair_middle_img">
+              <div class="types_of_repair__card__description__text">
+                <h3 class="types_of_repair__card__header">
+                  Overhaul
+                </h3>
+                <ul class="types_of_repair__list">
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Dismantling of old coatings</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Wallpapering</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Painting walls and ceilings</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Laying flooring</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Replacing plumbing</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Replacing sockets and switches</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Replacing doors</a>
+                  </li>
+                </ul>
+                <button class="types_of_repair__price_btn">
+                  FROM 1800 RUB/M2
+                </button>
+              </div>
+            </div>
+            <div class="types_of_repair__card__description">
+              <img src="images/types_of_repair_right_img.svg" alt="types_of_repair_right_img">
+              <div class="types_of_repair__card__description__text">
+                <h3 class="types_of_repair__card__header">
+                  Designer repair
+                </h3>
+                <ul class="types_of_repair__list">
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Dismantling of old coatings</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Wallpapering</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Painting walls and ceilings</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Laying flooring</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Replacing plumbing</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Replacing sockets and switches</a>
+                  <li class="types_of_repair__item">
+                    <a class="types_of_repair__link" href="#">Replacing doors</a>
+                  </li>
+                </ul>
+                <button class="types_of_repair__price_btn">
+                  FROM 4000 RUB/M2
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="measurer_request">
+          <div class="measurer_request__advantages">
+            <div class="measurer_request__advantages__background">
+              <img class="measurer_request__advantages__img" src="images/measurer_request_advantages_background.svg" alt="measurer_request__advantages__background">
+            </div>
           </div>
         </div>
       </section>
