--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <h2 class="online_control__header">
           ONLINE CONTROL
         </h2>
-        <div class="online_control__camera_logo">
+        <div class="secondary_section_logo">
           <img src="images/line.svg" alt="line">
           <img src="images/camera.svg" alt="camera">
           <img src="images/line.svg" alt="line">
@@ -173,7 +173,7 @@
         <h2 class="types_of_repair__header">
          TYPES OF REPAIR
         </h2>
-        <div class="types_of_repair__logo">
+        <div class="secondary_section__logo">
           <img src="images/line.svg" alt="line">
           <img src="images/repair.svg" alt="repair">
           <img src="images/line.svg" alt="line">
@@ -303,8 +303,138 @@
             <div class="measurer_request__advantages__background">
               <img class="measurer_request__advantages__img" src="images/measurer_request_advantages_background.svg" alt="measurer_request__advantages__background">
             </div>
+            <ul class="measurer_request__advantages__list">
+              <li class="measurer_request__advantages__item">
+                <div class="measurer_request__advantages__point">
+                  <img class="point__img" src="images/point.svg" alt="point">
+                  <p class="point__value">
+                    01
+                  </p>
+                </div>
+                <p class="measurer_request__advantages__text">
+                  Our specialist will arrive for measurements per day contact, or appoint a date convenient for you
+                </p>                
+              <li class="types_of_repair__item">
+                <div class="measurer_request__advantages__point">
+                  <img class="point__img" src="images/point.svg" alt="point">
+                  <p class="point__value">
+                    02
+                  </p>
+                </div>
+                  <p class="measurer_request__advantages__text">
+                  Free metering
+                </p>
+              <li class="types_of_repair__item">
+                <div class="measurer_request__advantages__point">
+                  <img class="point__img" src="images/point.svg" alt="point">
+                  <p class="point__value">
+                    03
+                  </p>
+                </div>
+                <p class="measurer_request__advantages__text">
+                  Free consultation
+                </p>
+              <li class="types_of_repair__item">
+                <div class="measurer_request__advantages__point">
+                  <img class="point__img" src="images/point.svg" alt="point">
+                  <p class="point__value">
+                    04
+                  </p>
+                </div>
+                <p class="measurer_request__advantages__text">
+                  Get a cost estimate and the timing of your future repairs 
+                </p> 
+              </li>
+            </ul>
           </div>
         </div>
+        <div class="measurer_request__submit_section">
+          <h3 class="measurer_request__submit_section__description">
+            Leave a request for free departure of the measurer
+          </h3>
+          <div class="measurer_request__submit_section__data_input">
+            <p class="input_designator">
+              Name
+            </p>
+            <br>
+            <input type="text" placeholder="What is your name:"/>          
+          </div>
+          <div class="measurer_request__submit_section__data_input">
+            <p class="input_designator">
+              Phone
+            </p>
+            <br>
+            <input type="tel" placeholder="Your phone number:"/>          
+          </div>
+          <div class="measurer_request__submit_section__data_input">
+            <p class="input_designator">
+              Email
+            </p>
+            <br>
+            <input type="email" placeholder="Your email:"/>          
+          </div>
+          <div class="personal_data_processing_agreement">
+            <input type="checkbox">
+            <label>
+              I agree to the processing of personal data
+            </label>
+          </div>
+          <button class="call_the_measurer__btn">
+            CALL THE MEASURER
+          </button>
+          <div class="discount">
+            <img class="discount__img" src="images/discount.svg" alt="discount">
+            <p class="discount_description">
+              Help save 10 - 20% of the cost of materials
+            </p>
+          </div>
+        </div>
+        <div class="wildest_fantasies">
+          <div class="wildest_fantasies__text">
+            <h2 class="main_block__header">
+            WE REALIZE YOUR WILDEST FANTASIES
+            </h2>
+            <ul class="wildest_fantasies__list">
+              <li class="wildest_fantasies__item">
+                <a class="wildest_fantasies__link" href="#">American classic</a>
+              <li class="wildest_fantasies__item">
+                <a class="wildest_fantasies__link" href="#">Empire</a>
+              <li class="wildest_fantasies__item">
+                <a class="wildest_fantasies__link" href="#">Classical</a>
+              <li class="wildest_fantasies__item">
+                <a class="wildest_fantasies__link" href="#">Loft</a>
+              <li class="wildest_fantasies__item">
+                <a class="wildest_fantasies__link" href="#">Minimalism</a>
+              <li class="wildest_fantasies__item">
+                <a class="wildest_fantasies__link" href="#">Provence</a>
+              <li class="wildest_fantasies__item">
+                <a class="wildest_fantasies__link" href="#">Romanticism</a>
+              <li class="wildest_fantasies__item">
+                <a class="wildest_fantasies__link" href="#">Scandinavian style</a>
+              <li class="wildest_fantasies__item">
+                <a class="wildest_fantasies__link" href="#">Mediterrian style</a>
+              <li class="wildest_fantasies__item">
+                <a class="wildest_fantasies__link" href="#">High tech</a>
+              <li class="wildest_fantasies__item">
+                <a class="wildest_fantasies__link" href="#">Electicism</a>
+              </li>
+            </ul>
+          </div>
+          <div class="wildest_fantasies__photos">
+            <img class="Fantasy_1" src="images/Fantasy_1.svg" alt="Fantasy_1">
+            <img class="Fantasy_2" src="images/Fantasy_2.svg" alt="Fantasy_2">
+            <img class="Fantasy_3" src="images/Fantasy_3.svg" alt="Fantasy_3">
+            <img class="Fantasy_4" src="images/Fantasy_4.svg" alt="Fantasy_4">
+          </div>
+        </div>
+      </section>
+      <section class="our_clients__section">
+        <div class="secondary_section__logo">
+          <img src="images/line.svg" alt="line">
+          <img src="images/clients.svg" alt="clients">
+          <img src="images/line.svg" alt="line">
+        </div>
+        
       </section>
     </main>
     <footer class="footer">
