--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset=”utf-8”>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>IC Repair Design</title>
 </head>
@@ -28,7 +29,7 @@
         </ul>
       </nav>
       <div class="header__tel">
-        <a href="tel:+79287683239">+7 (928) 768-32-39</a>
+        <a class="header__tel__link" href="tel:+79287683239">+7 (928) 768-32-39</a>
       </div>
       <div class="header__call_request_wrapper">
         <button type="button" class="header__call_request_btn">
@@ -39,10 +40,12 @@
     <main>
       <section class="hero">
         <h1 class="hero__header">
-          TURNKEY REPAIR IN YHE CITY OF <span class="city_highlight">ROSTOV-ON-DON</span>
+          TURNKEY REPAIR IN THE<br> CITY OF <span class="city_highlight">ROSTOV-ON-DON</span>
         </h1>
         <div class="hero__text">
-          Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work
+          Get ready-made turnkey repairs on time<br>
+          with work time saving up to 45 days and 20% from<br>
+          cost of materials due to the organization of work
         </div>
         <div class="hero__buttons_container">
           <div class="hero_btn">
@@ -429,17 +432,202 @@
         </div>
       </section>
       <section class="our_clients__section">
+        <h2 class="our_clients__header">
+          OUR CLIENTS
+        </h2>
         <div class="secondary_section__logo">
           <img src="images/line.svg" alt="line">
           <img src="images/clients.svg" alt="clients">
           <img src="images/line.svg" alt="line">
         </div>
-        
+        <p class="our_clients__description">
+          80% of our customers recommend us to their<br>
+          friends and family
+        </p>
+        <div class="our_clients__card_block">
+          <div class="our_clients__card">
+            <div class="client">
+              <div class="client_avatar">
+                <img class="avatar_img" src="images/fedorova.svg" alt="avatar_img">
+              </div>
+              <h4 class="client_name">
+                Fedorova Maria<br>
+                Konstantinovna
+              </h4>
+            </div>
+            <p class="client_feedback">
+              I want to thank the guys for their work. We put your shower part in repair.
+              I am very grateful that I referred to the repair as to my own. Great thanks I express the project 
+              to Georgia for its professionalism and approach.<br>
+              The repair process was turned out in terms, faster than anticipated. Team mobile and professional.
+              Works performed qualitatively without comments. Quality satisfied. Prices democratic. I recommend these masters.
+            </p>
+            <div class="client__repair_data">
+              <div class="client__repair_data__small_block">
+                <img class="client__repair_data_img" src="images/S_m2_img.svg" alt="S_m2_img">
+                <p class="client__repair_data__small_block__text">
+                  40 M2
+                </p>
+              </div>
+              <div class="client__repair_data__small_block">
+                <img class="client__repair_data_img" src="images/calendar.svg" alt="calendar">
+                <p class="client__repair_data__small_block__text">
+                  48 DAYS
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="our_clients__card">
+            <div class="client">
+              <div class="client_avatar">
+                <img class="avatar_img" src="images/afanasiev.svg" alt="avatar_img">
+              </div>
+              <h4 class="client_name">
+                Afanasiev Sergey<br>
+                Aleksandrovich
+              </h4>
+            </div>
+            <p class="client_feedback">
+              I want to thank the guys for their work. We put your shower part in repair.
+              I am very grateful that I referred to the repair as to my own. Great thanks I express the project 
+              to Georgia for its professionalism and approach.<br>
+              The repair process was turned out in terms, faster than anticipated. Team mobile and professional.
+              Works performed qualitatively without comments. Quality satisfied. Prices democratic. I recommend these masters.
+            </p>
+            <div class="client__repair_data">
+              <div class="client__repair_data__small_block">
+                <img class="client__repair_data_img" src="images/S_m2_img.svg" alt="S_m2_img">
+                <p class="client__repair_data__small_block__text">
+                  90 M2
+                </p>
+              </div>
+              <div class="client__repair_data__small_block">
+                <img class="client__repair_data_img" src="images/calendar.svg" alt="calendar">
+                <p class="client__repair_data__small_block__text">
+                  128 DAYS
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="our_clients__card">
+            <div class="client">
+              <div class="client_avatar">
+                <img class="avatar_img" src="images/kiriev.svg" alt="avatar_img">
+              </div>
+              <h4 class="client_name">
+                Kiriev Egor<br>
+                Leonidovich
+              </h4>
+            </div>
+            <p class="client_feedback">
+              I want to thank the guys for their work. We put your shower part in repair.
+              I am very grateful that I referred to the repair as to my own. Great thanks I express the project 
+              to Georgia for its professionalism and approach.<br>
+              The repair process was turned out in terms, faster than anticipated. Team mobile and professional.
+              Works performed qualitatively without comments. Quality satisfied. Prices democratic. I recommend these masters.
+            </p>
+            <div class="client__repair_data">
+              <div class="client__repair_data__small_block">
+                <img class="client__repair_data_img" src="images/S_m2_img.svg" alt="S_m2_img">
+                <p class="client__repair_data__small_block__text">
+                  56 M2
+                </p>
+              </div>
+              <div class="client__repair_data__small_block">
+                <img class="client__repair_data_img" src="images/calendar.svg" alt="calendar">
+                <p class="client__repair_data__small_block__text">
+                  86 DAYS
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>        
+      </section>
+      <section class="questions_section">
+        <h2 class="questions_section__header">
+          HAVE ANY QUESTION?
+        </h2>
+        <div class="questions__submit_section">
+          <div class="questions__submit_section__data_input">
+            <p class="input_designator">
+              Name
+            </p>
+            <br>
+            <input type="text" placeholder="What is your name:"/>          
+          </div>
+          <div class="questions__submit_section__data_input">
+            <p class="input_designator">
+              Phone
+            </p>
+            <br>
+            <input type="tel" placeholder="Your phone number:"/>          
+          </div>
+          <div class="questions__submit_section__data_input">
+            <p class="input_designator">
+              Question
+            </p>
+            <br>
+            <input type="text" placeholder="I want to know:"/>          
+          </div>
+          <div class="personal_data_processing_agreement">
+            <input type="checkbox">
+            <label>
+              I agree to the processing of personal data
+            </label>
+          </div>
+          <button class="call_the_measurer__btn">
+            SUBMIT
+          </button>          
+        </div>
+      </section>
+      <section class="adress__section">
+        <h2 class="adress__section__header">
+          Rostov-on-Don, Nansen St., 239 Shopping Center<br>
+          Decorum Tel +7 (928) 768 32 29
+        </h2>
+        <div class="adress__section__links">
+          <a href="mailto:#"> <img src="images/e-mail_icon.svg" alt="e-mail"></a>
+          <a href="#"> <img src="images/instagram_icon.svg" alt="instagram"></a>
+        </div>
+        <div class="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2708.555126641048!2d39.720604575962156!3d47.24484721288894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40e3b9b47a7e7029%3A0x9e8cb546a10601cc!2z0KLQpiAi0JTQtdC60L7RgNGD0Lwi!5e0!3m2!1sru!2sru!4v1696240344691!5m2!1sru!2sru" 
+          width="400" 
+          height="300" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      
+      <div class="header__logo">
+        IC "Repair Design Project"
+      </div>
+      <nav class="header__nav">
+        <ul class="header__list">
+          <li class="header__item">
+            <a class="header__link" href="#">HOME</a>
+          <li class="header__item">
+            <a class="header__link" href="#">PROJECTS</a>
+          <li class="header__item">
+            <a class="header__link" href="#">MEASUREMENT</a>
+          <li class="header__item">
+            <a class="header__link" href="#">TEAM</a>
+          <li class="header__item">
+            <a class="header__link" href="#">CONTACTS</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__tel">
+        <a href="tel:+79287683239">+7 (928) 768-32-39</a>
+      </div>
+      <div class="header__call_request_wrapper">
+        <button type="button" class="header__call_request_btn">
+          REQUEST A CALL
+        </button>
+      </div>
     </footer>
-
 </body>
 </html>
