--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
           cost of materials due to the organization of work
         </div>
         <div class="hero__buttons_container">
-          <div class="hero_btn">
+          <button class="hero_btn">
             CALCULATE THE COST
-          </div>
-          <div class="hero_btn">
+          </button>
+          <button class="hero_btn">
             SUBMIT YOUR APPLICATION
-          </div>
+          </button>
         </div>
       </section>
       <section class="completed_projects__section">
@@ -104,20 +104,20 @@
             <img src="images/slider_arrows.svg" alt="slider_arrows">
           </div>
         </div>
-        <div class="completed_projects__nav">
-          <ul class="completed_projects__nav__list">
-            <li class="completed_projects__nav__item">
-              <a class="completed_projects__link" href="#">ROSTOV-ON-DON ADMIRAL</a>
-            <li class="completed_projects__item">
-              <a class="completed_projects__link" href="#">SOCHI THIEVES</a>
-            <li class="completed_projects__item">
-              <a class="completed_projects__link" href="#">ROSTOV-ON-DON PATRIOT</a>
-            </li>
-          </ul>
-        </div>
-        <div class="completed_projects__image_block">
+        <div class="completed_projects__image_block">  
+          <div class="completed_projects__nav">
+            <ul class="completed_projects__nav__list">
+              <li class="completed_projects__nav__item">
+                <a class="completed_projects__link" href="#">ROSTOV-ON-DON ADMIRAL</a>
+              <li class="completed_projects__item">
+                <a class="completed_projects__link" href="#">SOCHI THIEVES</a>
+              <li class="completed_projects__item">
+                <a class="completed_projects__link" href="#">ROSTOV-ON-DON PATRIOT</a>
+              </li>
+            </ul>
+          </div>
           <img src="images/interior.svg" alt="interior">
-        </div>
+        </div>          
       </section>
       <section class="online_control__section">
         <h2 class="online_control__header">
