--- a/index.html
+++ b/index.html
@@ -60,46 +60,49 @@
         <div class="completed_projects__description">
           <div class="completed_projects__description__main_block">
             <h2 class="main_block__header">
-              COMPLETED PROJECTS
+              COMPLETED<br>
+              PROJECTS
             </h2>
             <p class="main_block__description">
               Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction 
               market we have made happy more than 1000 families
             </p>
           </div>
-          <div class="completed_projects__secondary_block">
-            <h3 class="secondary_block__header">
-              CITY
-            </h3>
-            <p class="secondary_block__description">
-              Rostov-on-Don<br>
-              LCD admiral
-            </p>
-          </div>
-          <div class="completed_projects__secondary_block">
-            <h3 class="secondary_block__header">
-              APARTMENT AREA
-            </h3>
-            <p class="secondary_block__description">
-              81 m2
-            </p>
-          </div>
-          <div class="completed_projects__secondary_block">
-            <h3 class="secondary_block__header">
-              REPAIR TIME
-            </h3>
-            <p class="secondary_block__description">
-              3.5 months
-            </p>
-          </div>
-          <div class="completed_projects__secondary_block">
-            <h3 class="secondary_block__header">
-              REPAIR COST
-            </h3>
-            <p class="secondary_block__description">
-              UPON REQUEST
-            </p>
-          </div>
+          <div class="completed_projects__secondary_group">
+            <div class="completed_projects__secondary_block">
+              <h3 class="secondary_block__header">
+                CITY
+              </h3>
+              <p class="secondary_block__description">
+                Rostov-on-Don<br>
+                LCD admiral
+              </p>
+            </div>
+            <div class="completed_projects__secondary_block">
+              <h3 class="secondary_block__header">
+                APARTMENT AREA
+              </h3>
+              <p class="secondary_block__description">
+                81 m2
+              </p>
+            </div>
+            <div class="completed_projects__secondary_block">
+              <h3 class="secondary_block__header">
+                REPAIR TIME
+              </h3>
+              <p class="secondary_block__description">
+                3.5 months
+              </p>
+            </div>
+            <div class="completed_projects__secondary_block">
+              <h3 class="secondary_block__header">
+                REPAIR COST
+              </h3>
+              <p class="secondary_block__description">
+                UPON REQUEST
+              </p>
+            </div>
+          </div> 
           <div class="completed_projects__slider">
             <img src="images/slider_arrows.svg" alt="slider_arrows">
           </div>
@@ -116,7 +119,9 @@
               </li>
             </ul>
           </div>
-          <img src="images/interior.svg" alt="interior">
+          <div class="completed_projects__img">
+            <img src="images/interior.svg" alt="interior">
+          </div>
         </div>          
       </section>
       <section class="online_control__section">
@@ -130,11 +135,10 @@
         </div>
         <div class="online_control__video">
           <div class="online_control__video_wrapper">
-            <video class="video__item" src="#"></video>
-          </div>
-          <button class="online_control__play_btn">
-            <img class="play_btn__image" src="images/play_btn.svg" alt="play_btn">
-          </button>
+            <video class="video__item" controls poster="images/video_poster.svg">
+              <source src="#">
+            </video>
+          </div>          
         </div>
         <img class="online_control__separator" src="images/separator_line.svg" alt="separator_line">
         <div class="broadcast_request">
