--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               PROJECTS
             </h2>
             <p class="main_block__description">
-              Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction 
+              Only a small part of the work performed by our company is presented<br> on the site. For 14 years on in the construction 
               market we have made happy more than 1000 families
             </p>
           </div>
@@ -154,15 +154,15 @@
               <p class="input_designator">
                 Name
               </p>
-              <br>
               <input type="text" placeholder="What is your name:"/>          
             </div>
             <div class="broadcast_request__submit_section__data_input">
               <p class="input_designator">
                 Phone
               </p>
-              <br>
-              <input type="tel" placeholder="Your phone number:"/>          
+              <div class="input_field">
+                <input type="tel" placeholder="Your phone number:"/>
+              </div>     
             </div>
             <button class="submit_btn">
               SUBMIT
