--- a/index.html
+++ b/index.html
@@ -151,28 +151,26 @@
           </div>
           <div class="broadcast_request__submit_section">
             <div class="broadcast_request__submit_section__data_input">
-              <p class="input_designator">
+              <label class="input_designator">
                 Name
-              </p>
-              <input type="text" placeholder="What is your name:"/>          
+              </label>
+              <input class="input_field" type="text" placeholder="What is your name:"/>          
             </div>
             <div class="broadcast_request__submit_section__data_input">
-              <p class="input_designator">
+              <label class="input_designator">
                 Phone
-              </p>
-              <div class="input_field">
-                <input type="tel" placeholder="Your phone number:"/>
-              </div>     
+              </label>
+              <input class="input_field" type="tel" placeholder="Your phone number:"/>   
             </div>
             <button class="submit_btn">
               SUBMIT
             </button>
           </div>
-          <div class="personal_data_processing_agreement">
-            <input type="checkbox">
-            <label>
+          <div class="personal_data_processing_agreement">             
+            <input class="checkbox" type="checkbox">
+            <label class="checkbox_label">
               I agree to the processing of personal data
-            </label>
+            </label>           
           </div>
         </div>
       </section>
@@ -218,7 +216,7 @@
           </div>
           <div class="types_of_repair__card">
             <div class="types_of_repair__card__description">
-              <img src="images/types_of_repair_middle_img.svg" alt="types_of_repair_middlw_img">
+              <img src="images/types_of_repair_middle_img.svg" alt="types_of_repair_middle_img">
               <div class="types_of_repair__card__description__text">
                 <h3 class="types_of_repair__card__header">
                   Overhaul
@@ -247,34 +245,6 @@
             </div>
           </div>
           <div class="types_of_repair__card">
-            <div class="types_of_repair__card__description">
-              <img src="images/types_of_repair_middle_img.svg" alt="types_of_repair_middle_img">
-              <div class="types_of_repair__card__description__text">
-                <h3 class="types_of_repair__card__header">
-                  Overhaul
-                </h3>
-                <ul class="types_of_repair__list">
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Dismantling of old coatings</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Wallpapering</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Painting walls and ceilings</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Laying flooring</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Replacing plumbing</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Replacing sockets and switches</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Replacing doors</a>
-                  </li>
-                </ul>
-                <button class="types_of_repair__price_btn">
-                  FROM 1800 RUB/M2
-                </button>
-              </div>
-            </div>
             <div class="types_of_repair__card__description">
               <img src="images/types_of_repair_right_img.svg" alt="types_of_repair_right_img">
               <div class="types_of_repair__card__description__text">
