--- a/index.html
+++ b/index.html
@@ -192,20 +192,13 @@
                   Redecorating
                 </h3>
                 <ul class="types_of_repair__list">
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Dismantling of old coatings</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Wallpapering</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Painting walls and ceilings</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Laying flooring</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Replacing plumbing</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Replacing sockets and switches</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Replacing doors</a>
+                  <li class="types_of_repair__item">Dismantling of old coatings
+                  <li class="types_of_repair__item">Wallpapering
+                  <li class="types_of_repair__item">Painting walls and ceilings
+                  <li class="types_of_repair__item">Laying flooring
+                  <li class="types_of_repair__item">Replacing plumbing
+                  <li class="types_of_repair__item">Replacing sockets and switches
+                  <li class="types_of_repair__item">Replacing doors
                   </li>
                 </ul>
                 <button class="types_of_repair__price_btn">
@@ -222,20 +215,13 @@
                   Overhaul
                 </h3>
                 <ul class="types_of_repair__list">
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Dismantling of old coatings</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Wallpapering</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Painting walls and ceilings</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Laying flooring</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Replacing plumbing</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Replacing sockets and switches</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Replacing doors</a>
+                  <li class="types_of_repair__item">Dismantling of old coatings
+                  <li class="types_of_repair__item">Wallpapering
+                  <li class="types_of_repair__item">Painting walls and ceilings
+                  <li class="types_of_repair__item">Laying flooring
+                  <li class="types_of_repair__item">Replacing plumbing
+                  <li class="types_of_repair__item">Replacing sockets and switches
+                  <li class="types_of_repair__item">Replacing doors
                   </li>
                 </ul>
                 <button class="types_of_repair__price_btn">
@@ -252,20 +238,13 @@
                   Designer repair
                 </h3>
                 <ul class="types_of_repair__list">
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Dismantling of old coatings</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Wallpapering</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Painting walls and ceilings</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Laying flooring</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Replacing plumbing</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Replacing sockets and switches</a>
-                  <li class="types_of_repair__item">
-                    <a class="types_of_repair__link" href="#">Replacing doors</a>
+                  <li class="types_of_repair__item">Dismantling of old coatings
+                  <li class="types_of_repair__item">Wallpapering
+                  <li class="types_of_repair__item">Painting walls and ceilings
+                  <li class="types_of_repair__item">Laying flooring
+                  <li class="types_of_repair__item">Replacing plumbing
+                  <li class="types_of_repair__item">Replacing sockets and switches
+                  <li class="types_of_repair__item">Replacing doors
                   </li>
                 </ul>
                 <button class="types_of_repair__price_btn">
